---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clk) -> bool {
    let (x, y): bool = true;

    true
}


error: Pattern type mismatch
  ┌─ testinput:2:9
  │
2 │     let (x, y): bool = true;
  │         ^^^^^^  ---- because this has type bool
  │         │        
  │         expected bool
  │
  = Expected: bool
  =      Got: (_, _)


